@@ -13,6 +13,10 @@
 - rand: use autoconf to detect presence of unix functions
 
 
+New feature: Type-checking casts.
+- defs: enable type-checking signed_cast()
+
+
 libHX 1.28 (November 18 2008)
 =============================
 - add HXTYPE_{U,}INT{8,16,32,64}
